# can-lite

./: .clangd  .gitignore  .ls-lint.yml  .mega-linter.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  release-please-config.json  sonar-project.properties
.claude/agents/: executor.md  orchestrator.md  planner.md  reviewer.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/actions/generate-requirements-pdf/: action.yml  generate.py
.github/agents/: executor.agent.md  orchestrator.agent.md  planner.agent.md  reviewer.agent.md
.github/instructions/: can-bus-protocols.instructions.md  embedded-cpp.instructions.md  testing.instructions.md
.github/linters/: goodcheck.yml
.github/workflows/: ci.yml  release-please.yml  requirements-validation.yml  static-analysis.yml
can-lite/: CMakeLists.txt
can-lite/categories/firmware_upgrade/: CMakeLists.txt  FirmwareUpgradeCategoryClient.cpp  FirmwareUpgradeCategoryClient.hpp  FirmwareUpgradeCategoryServer.cpp  FirmwareUpgradeCategoryServer.hpp  FirmwareUpgradeDefinitions.hpp
can-lite/categories/firmware_upgrade/test/: CMakeLists.txt  TestFirmwareUpgradeCategoryClient.cpp  TestFirmwareUpgradeCategoryServer.cpp
can-lite/categories/foc_motor/: CMakeLists.txt  FocMotorCategoryClient.cpp  FocMotorCategoryClient.hpp  FocMotorCategoryServer.cpp  FocMotorCategoryServer.hpp  FocMotorDefinitions.hpp
can-lite/categories/foc_motor/test/: CMakeLists.txt  TestFocMotorCategoryClient.cpp  TestFocMotorCategoryServer.cpp
can-lite/categories/system/: CMakeLists.txt  CanSystemCategoryClient.cpp  CanSystemCategoryClient.hpp  CanSystemCategoryServer.cpp  CanSystemCategoryServer.hpp
can-lite/client/: CMakeLists.txt  CanProtocolClient.cpp  CanProtocolClient.hpp
can-lite/client/test/: CMakeLists.txt  TestCanProtocolClient.cpp
can-lite/core/: CMakeLists.txt  CanCategory.cpp  CanCategory.hpp  CanFrameCodec.cpp  CanFrameCodec.hpp  CanFrameTransport.cpp  CanFrameTransport.hpp  CanMessageType.hpp  CanProtocolDefinitions.hpp  CanSystemCategory.cpp  CanSystemCategory.hpp
can-lite/core/test/: CMakeLists.txt  TestCanProtocolCore.cpp
can-lite/drivers/: CMakeLists.txt
can-lite/drivers/implementation/: CMakeLists.txt  Canable.cpp  Canable.hpp  Kvaser.cpp  Kvaser.hpp  PCan.cpp  Pcan.cpp  Pcan.hpp  SocketCan.cpp  SocketCan.hpp
can-lite/drivers/interface/: CMakeLists.txt  CanAdapter.hpp
can-lite/server/: CMakeLists.txt  CanProtocolServer.cpp  CanProtocolServer.hpp
can-lite/server/test/: CMakeLists.txt  TestCanProtocolServer.cpp
can-lite/transport/: CMakeLists.txt  IsoTpTransport.hpp  IsoTpTransportImpl.cpp  IsoTpTransportImpl.hpp
can-lite/transport/iso-tp/: CMakeLists.txt  IsoTpChannel.hpp  IsoTpChannelImpl.cpp  IsoTpChannelImpl.hpp  IsoTpFrameCodec.cpp  IsoTpFrameCodec.hpp  IsoTpReceiver.cpp  IsoTpReceiver.hpp  IsoTpSender.cpp  IsoTpSender.hpp  IsoTpTypes.hpp
can-lite/transport/test/: CMakeLists.txt  IsoTpTestHelper.hpp  TestIsoTpChannel.cpp  TestIsoTpFrameCodec.cpp  TestIsoTpReceiver.cpp  TestIsoTpSender.cpp  TestIsoTpTransportImpl.cpp
documents/design/: architecture.md
documents/requirements/: can-protocol.yaml  firmware-upgrade.yaml  foc-motor-control.yaml
documents/spec/: can-protocol.md  firmware-upgrade.md  foc-motor-control.md
documents/templates/: requirements.md
documents/tools/: requirement.schema.json
integration_tests/features/: can_bus_transport.feature  category_discovery.feature  error_handling.feature  firmware_upgrade.feature  foc_motor_category.feature  rate_limiting.feature  sequence_validation.feature  system_category.feature
integration_tests/hooks/: CMakeLists.txt
integration_tests/main/: CMakeLists.txt
integration_tests/steps/: CMakeLists.txt  CanBusSteps.cpp  CategoryDiscoverySteps.cpp  ErrorHandlingSteps.cpp  FirmwareUpgradeSteps.cpp  FocMotorSteps.cpp  RateLimitingSteps.cpp  SequenceValidationSteps.cpp  SystemCategorySteps.cpp
integration_tests/support/: ApplicationFixture.cpp  ApplicationFixture.hpp  CMakeLists.txt  Mocks.hpp  ResultTypes.hpp  TestCategories.cpp  TestCategories.hpp  VirtualCan.cpp  VirtualCan.hpp
